<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
		<TextView
			android:id="@+id/nombre"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:layout_marginBottom="20dp"
			android:textAlignment="center"
			android:textAllCaps="true" 
			android:textStyle="bold"
			android:textSize="25sp"/>
		
		<TextView
			android:id="@+id/txtDir"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold|italic"
			android:textSize="15sp"
			android:text="@string/txt_direccion"/>
		
		<TextView
			android:id="@+id/direccion"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" />
		
		<TextView
			android:id="@+id/txtTel"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold|italic"
			android:textSize="15sp"
			android:text="@string/txt_telefono"/>
		
		<TextView
			android:id="@+id/telefono"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" />
		
		<TextView
			android:id="@+id/txtHorario"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold|italic"
			android:textSize="15sp"
			android:text="@string/txt_horario"/>
		
		<TextView
			android:id="@+id/horarios"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" />
		
		<TextView
			android:id="@+id/txtWebsite"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold|italic"
			android:textSize="15sp"
			android:text="@string/txt_website"/>
		
		<TextView
			android:id="@+id/website"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" />
		
		<TextView
			android:id="@+id/txtEmail"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:textStyle="bold|italic"
			android:textSize="15sp"
			android:text="@string/txt_email"/>
		
		<TextView
			android:id="@+id/email"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginLeft="20dp" />

		<Button
			android:id="@+id/btnCall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="20dp"
			android:text="@string/btn_call" />
		
		<FrameLayout
			android:id="@+id/commentsFrame"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="30dp" />
			
	</LinearLayout>
    
</ScrollView>
